POR/RefEdge/src/objects/Attribute_Mapping__c.object
<CustomObject>
    <description>Attribute Mapping(Bound 5)</description>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <description>Auto-populated with the Field name; can be overwritten with desired Attribute name.</description>
        <inlineHelpText>Auto-populated with the Field name; can be overwritten with desired Attribute name.</inlineHelpText>
        <label>Attribute Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_add__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When a new value is added to a picklist field, that value will be automatically added as an attribute value.</inlineHelpText>
        <label>Auto-Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_delete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When a value is deleted from a picklist field, that value will be automatically deleted as an attribute value.</inlineHelpText>
        <label>Auto-Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_populate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically populates a record&apos;s attributes with mapped picklst values at the time the Reference Program Member checkbox is selected.</inlineHelpText>
        <label>Auto-Populate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When changes to labels are made to a picklist field, those changes will be automatically made to the mapped attribute.</inlineHelpText>
        <label>Auto-Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_RelationShipName__c</fullName>
        <label>Child RelationShipName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Api_Name__c</fullName>
        <label>Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Label_Name__c</fullName>
        <description>Auto-populated with the Field name; can be overwritten with desired Filter name.</description>
        <inlineHelpText>Auto-populated with the Field name; can be overwritten with desired Filter name.</inlineHelpText>
        <label>Filter Label Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inheritable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this picklist is mapped to an Account attribute then all related Contact and Reference Content records will inherit this attribute.</inlineHelpText>
        <label>Inheritable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Related_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Related Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Related_MultiSelectPicklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Related MultiSelectPicklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapping_Type__c</fullName>
        <label>Mapping Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent Object</fullName>
                </value>
                <value>
                    <fullName>Child Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>Select the Object containing the field that is to be mapped.</description>
        <inlineHelpText>Select the Object containing the field that is to be mapped.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <label>Related Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationShip_Name__c</fullName>
        <label>RelationShip Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Attribute Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Filter_Label_Name__c</columns>
        <columns>Attribute_Name__c</columns>
        <columns>Object__c</columns>
        <columns>Mapping_Type__c</columns>
        <columns>Field__c</columns>
        <columns>Auto_populate__c</columns>
        <columns>Auto_add__c</columns>
        <columns>Auto_delete__c</columns>
        <columns>Auto_update__c</columns>
        <columns>Inheritable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Attribute Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>